# deep-visual-constraints

./: .gitignore  pyproject.toml  train_PIFO.ipynb  train_SDFObject.ipynb  train_noPixelAligned.ipynb  train_vectorObject.ipynb  visualize_PCA_result.ipynb  visualize_data.ipynb  visualize_shape_result.ipynb  visualize_task_result.ipynb
dvc/: data_gen_utils.py  dataset.py  frame.py  simulation_utils.py  vector_object.py
notebooks/: 6D_pose_estimation.ipynb  evaluation_grasp.ipynb  evaluation_hang.ipynb  generateGrasp.ipynb  generateHang.ipynb  generateImage.ipynb  generateSDF.ipynb  handover.ipynb  imitation_dvc.ipynb  imitation_expert_demo.ipynb  multiPickAndHang.ipynb
