[project]
name = "deep-visual-constraints"
version = "0.1.0"
description = "Neural Implicit Models for Manipulation Planning from Visual Input"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.14.0",
    "ipykernel>=6.29.5",
    "numpy>=2.3.1",
    "pyglet<2",
    "scipy>=1.16.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "trimesh>=4.7.0",
]
